# notatory-learning

./: .env.example  .gitignore  README.md  gen_pem.sh  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/docker/: Dockerfile
.devcontainer/scripts/: setup_uv.sh
docker/: Dockerfile
notatory_learning/: __init__.py  main.py
notatory_learning/utils/: gpt_4o_utils.py  voice_utils.py
scripts/: launch.sh  serve.sh
